# slintuisegf

./: CMakeLists.txt  LICENSE  setup.sh
src/: main.cpp
ui_src/: segf_win.slint
